add__burger-menu

--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,9 +1,31 @@
 <header class="header">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                HEADER
-            </div>
-        </div>
+    <div class="header__logo">
+        <a href="#">
+            <img src="./img/Header/logo.jpg" alt="logo">
+        </a>
+    </div>
+    <nav class="header__menu">
+        <ul>
+            <li><a href="#">Appointment</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Reviews</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="burger-menu">
+        <a href="#" class="burger-menu__button">
+            <span class="burger-menu__lines"></span>
+        </a>
+        <nav class="burger-menu__nav">
+            <a href="#Appointment" class="burger-menu__link">Appointment</a>
+            <a href="#Gallery" class="burger-menu__link">Gallery</a>
+            <a href="#Services" class="burger-menu__link">Services</a>
+            <a href="#Team" class="burger-menu__link">Team</a>
+            <a href="#Reviews" class="burger-menu__link">Reviews</a>
+            <a href="#Contact" class="burger-menu__link">Contact</a>
+        </nav>
+        <div class="burger-menu__overlay"></div>
     </div>
 </header>
