--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,195 @@
-.header{
-    background-color: red;
-    color: #fff;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    background: $color2;
+    max-height: 100px;
+    min-width: 100%;
+
+    &__logo {
+        background-color: $color1;
+        a {
+            img {
+                max-width: 254px;
+                width: 100%;
+                max-height: 100px;
+                height: 100%;
+
+                @media screen and (max-width:1200px) {
+                    max-height: 90px;
+                    ;
+                }
+
+                @media screen and (max-width:992px) {
+                    max-height: 80px;
+                }
+
+                @media screen and (max-width:765px) {
+                    max-height: 70px;
+                }
+            }
+
+        }
+
+    }
+
+    &__menu {
+        ul {
+            display: flex;
+            gap: 50px;
+            margin-right: 16px;
+
+            @media screen and (max-width:1200px) {
+                gap: 30px;
+            }
+
+            li {
+                list-style: none;
+
+                a {
+                    text-decoration: none;
+                    color: $color1;
+                    font-family: 'Rosario';
+                    font-style: italic;
+                    font-weight: 700;
+                    font-size: 26px;
+                    line-height: 44px;
+                    padding: 4px 6px;
+                    transition: 0.3s ease-in-out;
+
+                    &:hover {
+                        background-color: $color1;
+                        color: $color2;
+                    }
+
+                    @media screen and (max-width:1200px) {
+                        font-size: 22px;
+                    }
+
+                    @media screen and (max-width:992px) {
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            display: none;
+        }
+    }
+
+    // ----------------burger-------------------
+    .burger-menu {
+        display: none;
+
+        @media screen and (max-width: 768px) {
+            display: block;
+        }
+    }
+
+    .burger-menu__button {
+        position: fixed;
+        top: 25px;
+        right: 20px;
+        z-index: 30;
+        width: 20px;
+        height: 20px;
+    }
+
+    .burger-menu__lines,
+    .burger-menu__lines::after,
+    .burger-menu__lines::before {
+        position: absolute;
+        width: 46px;
+        height: 6px;
+        background-color: $color1;
+        transition: 0.5s;
+    }
+
+    .burger-menu__lines {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: 0.5s;
+    }
+
+    .burger-menu__lines::after {
+        content: '';
+        top: 17px;
+        left: 0;
+    }
+
+    .burger-menu__lines::before {
+        content: '';
+        top: -17px;
+        left: 0;
+    }
+
+    .burger-menu_active .burger-menu__lines {
+        background-color: transparent;
+        transition: 0.5s;
+    }
+
+    .burger-menu_active .burger-menu__lines::before {
+        top: 0;
+        transform: rotate(45deg);
+        transition: 0.5s;
+    }
+
+    .burger-menu_active .burger-menu__lines::after {
+        top: 0;
+        transform: rotate(-45deg);
+        transition: 0.5s;
+    }
+
+    .burger-menu__nav {
+        padding-top: 80px;
+        position: fixed;
+        z-index: 20;
+        display: flex;
+        flex-flow: column;
+        height: 100vh;
+        background-color: rgb(32, 32, 32);
+        top: -100%;
+        transition: 0.5s;
+    }
+
+    .burger-menu_active .burger-menu__nav {
+        top: 0;
+        right: 0;
+        width: 57%;
+        transition: 0.5s;
+    }
+
+    .burger-menu__link {
+        padding: 20px;
+        font-size: 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-weight: bold;
+        color: #C4C4C4;
+    }
+
+    .burger-menu__link:hover {
+        color: #C4C4C4;
+    }
+
+    .burger-menu__overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 10;
+    }
+
+    .burger-menu_active .burger-menu__overlay {
+        display: block;
+    }
 }
