--- a/src/sass/reset_style.scss
+++ b/src/sass/reset_style.scss
@@ -24,7 +24,9 @@ time, mark, audio, video {
     background:transparent;
 }
 body {
-    line-height:1;
+    line-height:1,5;
+    min-height: 100vh;
+    scroll-behavior: smooth;
 }
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
