add__gallery-grid

--- a/src/components/_gallery.html
+++ b/src/components/_gallery.html
@@ -1,3 +1,12 @@
 <section class="gallery">
-    
+    <div class="gallery__container">
+        <div class="gallery__images">
+            <img class="images-1" src="./img/Gallery/1.jpg" alt="1">
+            <img class="images-2" src="./img/Gallery/2.jpg" alt="2">
+            <img class="images-3" src="./img/Gallery/3.jpg" alt="3">
+            <img class="images-4" src="./img/Gallery/4.jpg" alt="4">
+            <img class="images-5" src="./img/Gallery/5.jpg" alt="5">
+            <img class="images-6" src="./img/Gallery/6.jpg" alt="6">
+        </div>
+    </div>
 </section>
