--- a/src/sass/components/page-home.scss
+++ b/src/sass/components/page-home.scss
@@ -2,7 +2,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 100%;
 
     &__content {
         padding-left: 10px;
